syntax = "proto3";

option go_package = "github.com/rvinnie/lightstream/api/proto/v1";

package gateway;

service ImageStorage {
  rpc GetImage (ImageStorageRequest) returns (ImageStorageResponse) {}
}

message ImageStorageRequest {
  string path = 1;
}

message ImageStorageResponse {
  bytes image = 1;
  string contentType = 2;
}